lab4 with sqldb hosted on gdrive

--- a/lab4/Lab 4.ipynb
+++ b/lab4/Lab 4.ipynb
@@ -2894,7 +2894,7 @@
    "metadata": {},
    "source": [
     "### Print Associative Table\n",
-    "Each enzyme we chose is unique to its pathway. Enzymes with the same EC number come from the same pathway. \n",
+    "There is a many to one relationship between enzyme and pathway. Multiple unique enzymes are in the same pathway. Enzymes with the same EC number come from the same pathway. \n",
     "There is an order to enzymes in pathways. For glycolysis, step 1 is hexokinase, step 2 is phosphoglucose isomerase, step 3 is phosphofructokinase, step 4 is aldolase. "
    ]
   },
