--- a/lab6/lab 6.ipynb
+++ b/lab6/lab 6.ipynb
@@ -42,7 +42,24 @@
     "    unaligned.fastq: Contains reads that did not align to the Shewanella oneidensis reference genome                  \n",
     "                    \n",
     "_What percentage of your filtered library didn’t align to the reference genome?_  \n",
-    "29.13% of the reads aligned 0 times\n"
+    "\n",
+    "29.13% of the reads aligned 0 times\n",
+    "\n",
+    "_If you use --very-sensitive instead of --very-fast, does this percentage increase or decrease?_  \n",
+    "\n",
+    "Using --very-sensitive and --very-fast outputs the same percentage.\n",
+    "    \n",
+    "    Command: bowtie2 -p 4 --very-sensitive --no-unal -x /data/lab6/shewanella_oneidensis_mr-1 -U ~/computational_biology_BioE131/lab6/unaligned.fastq -S ~/computational_biology_BioE131/lab6/output2 --un ~/computational_biology_BioE131/lab6/unaligned2.fastq\n",
+    "    Database: /data/lab6/shewanella_oneidensis_mr-1    \n",
+    "    Input read: ~/computational_biology_BioE131/lab6/unaligned.fastq  \n",
+    "    unaligned.fastq: Contains reads that did not align to the Shewanella oneidensis reference genome\n",
+    "    Output message: 1028379 reads; of these:\n",
+    "                    1028379 (100.00%) were unpaired; of these:\n",
+    "                    299560 (29.13%) aligned 0 times\n",
+    "                    687571 (66.86%) aligned exactly 1 time\n",
+    "                    41248 (4.01%) aligned >1 times\n",
+    "                    70.87% overall alignment rate\n",
+    "    unaligned.fastq: Contains reads that did not align to the Shewanella oneidensis reference genome     \n"
    ]
   },
   {
@@ -1000,6 +1017,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
