--- a/final_proj/Week 1.ipynb
+++ b/final_proj/Week 1.ipynb
@@ -62,8 +62,7 @@
     "* 160523Alm_D16-4705_1_sequence: https://app.onecodex.com/analysis/public/280c9bcd6a9b4736\n",
     "* 160523Alm_D16-4705_2_sequence: https://app.onecodex.com/analysis/public/eb13aaff36b94d29\n",
     "\n",
-    "**Types of Microbes Living in Soil Sample:**  \n",
-    "quantify the abundance of different microbes in your metagenome"
+    "**Types of Microbes Living in Soil Sample:**  "
    ]
   },
   {
