--- a/final_proj/Week 2.ipynb
+++ b/final_proj/Week 2.ipynb
@@ -13,8 +13,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Throughout the contigs, there is an estimated count of 8000 different species with an alpha diversity of about 651 species."
+    "Throughout the contigs, there is an estimated count of 8000 different species with an alpha diversity of about 651 species, given by around 6 million sequences present in the contigs file. \n",
+    "The source hits distribution presented shows that there are many hits with other databases. Examples of databases that have the most hits are RefSeq, TrEMBL, IMG, GenBank and KEGG. \n",
+    "In terms of the functional breakdown of the sequences, it was found that 43.02% of predicted protein function reads were attributed to metabolic processes, around 24% is attributed to cell signaling and processing, 24% to information storage and processing and the rest was not characterized. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
