all fa complete

--- a/final_proj/Week 2.ipynb
+++ b/final_proj/Week 2.ipynb
@@ -4,9 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 2: Radhika Mardikar, Kelly Huang, Nathan Wong\n",
+    "# Week 2\n",
     "\n",
     "We uploaded our sequence to MG-RAST. Looking at the taxonomic distribution, it is observed that most of the DNA in the contigs belonged to the phylum Proteobacteria and Actinobacteria. The two most observed classes were Actinobacteria and Alphaproteobacteria."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We were able to assemble the entire genome provided using ___. Additionally, by piping the gunzip command output into a new partioned file, our first attempts were to assemble only the first 100 megabytes of the provided genome. However, this proved to be ineffective, as the assembeled reads were too low quality to be accepted by mg-rast. \n",
+    "\n",
+    "gunzip -c metagenome.gz | head -c 100M > 100Mpart.gz\n",
+    "\n",
+    "# Excerpt of Analysis from Week 1\n",
+    "\n",
+    "The majority of the microbes identified all can survive in the soil environment, as long as there is some water. Among the bacterium, there are some bacterium, such as cultibacterium and pseudonomasa, that are pathogenic to humans, and have been known to cause infections and illicit immune responses. In addition, there are also fungi present, such as cladosporium, which appear quite regularly in damp environments in the form of mold. Finally, a significant amount of the reads derived from this soil environment were not identified by OneCodex. A deeper investigation is needed to fully understand the range of microbes identified at this particular (radioactive) soil level.\n",
+    "\n",
+    "## Cultibacterium\n",
+    "\n",
+    "Cultibacterium acnes are aneorbic, Gram-positive bacterium that are commonly linked as the cause of skin acne. Cultibacterium acnes are oppurtunistic pathogens, and are proen to be among the bacteria linked to infections after surgery. Antibiotics are the reponse to these bacterium; however, there has been a rise of antibiotic-resistant C. acnes. \n",
+    "\n",
+    "## Cladosporium\n",
+    "Cladosporium are fungi, which are found in many molds indoors and outdoors, and can thrive on virtually any environment with water and minimal minerals and glucose. While most cladosporium are not pathogenic to humans, a buildup of cladosporium can often lead to musty odors.\n",
+    "\n",
+    "## Nocardiodides\n",
+    "Nocardiodides are aerobic, Gram-positive bacterium that are most commonly found in soil, herbage, and lakes with high saline concentration. Some nocardiodides, such as WSN05-2, are known to digest toxic pesticides. \n",
+    "\n",
+    "## Pseudomonas\n",
+    "Pseudomonas, as described in previous assignments, are aerobic, Gram-negative bacterium, which are most commonly associated with infections. Pseudomonas are pathogenic to humans, and certain strains are known to be particularly antiobiotic-resistant.\n",
+    "\n",
+    "## Methylobacterium\n",
+    "Methylobacterium are related to alphaproteobacteria, and are Gram-negative bacterium. Methylobacterium are pathogenic to humans, and are known to be resistant to high temperatures and disinfecting agents due to their high rates of homologous recombination, and thus are commonly found in hospitals.\n"
    ]
   },
   {
@@ -44,13 +73,12 @@
    ],
    "source": [
     "from IPython.display import Image, display\n",
-    "image = Image(filename = \"Photos/Genus.png\")\n",
-    "image"
+    "Image(filename = \"Photos/Genus.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -62,15 +90,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from IPython.display import Image, display\n",
-    "image = Image(filename = \"Photos/Function category hits.png\")\n",
-    "image"
+    "Image(filename = \"Photos/Function category hits.png\")"
    ]
   },
   {
@@ -80,7 +106,24 @@
     "# Project idea:\n",
     "In this project, we are given metagenomes that were retrieved from radioactive soil at different depths beneath the surface. We plan to compare the different microbial communities across the levels, paying special attention to the metabolic pathways each groups prioritizes. This will perhaps shed light on the impact of radioactivity on the various communities showcasing how they have evolved in their conditions. Another interesting aspect we want to consider is looking at how waste of certain species are transformed by other species – exploring the interdependence of the conglomerate of microbes in an area, and in different layers.\n",
     "The key aspect that we will use is the functional category hits distribution that will also require further research into which pathways specifically are more favored over others. By narrowing down to a certain species in every layer (most abundant in each), we can start to develop a sense of what the environment is like.\n",
-    "Our project will consists of two parts: 1) Using various different visualization tools to characterize the diversity, abundance, and phylogenetics trees of microbial communities at different depths. Some examples of the tools we will be using to determine species diversity in our soil sample include One Codex (for genomic microbial identification), VAMPS (for analysis of microbial population structures), AMPHORA (for inferring phylogenetic information), and MetaPhlAn (for profiling the composition of microbial communities). Characterization of species diversity allows us to identify the most common microbial communities present and find patterns amongst the communities. 2) Analyzing the most abundant microbial communities present and seeking patterns in the way different species of bacteria interact between/within the communities. For example, looking at metabolic pathways and seeing how waste of certain communities are metabolites for others, how that affects diversity at different depths, how different genes interact, and the adundance of various genes."
+    "Our project will consists of two parts: 1) Using various different visualization tools to characterize the diversity, abundance, and phylogenetics trees of microbial communities at different depths. Some examples of the tools we will be using to determine species diversity in our soil sample include One Codex (for genomic microbial identification), VAMPS (for analysis of microbial population structures), AMPHORA (for inferring phylogenetic information), and MetaPhlAn (for profiling the composition of microbial communities). Characterization of species diversity allows us to identify the most common microbial communities present and find patterns amongst the communities. 2) Analyzing the most abundant microbial communities present and seeking patterns in the way different species of bacteria interact between/within the communities. For example, looking at metabolic pathways and seeing how waste of certain communities are metabolites for others, how that affects diversity at different depths, how different genes interact, and the adundance of various genes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Bibliography\n",
+    "Aubin, G., Baud’huin, M., Lavigne, J., Brion, R., Gouin, F., Lepelletier, D., Jacqueline, C., Heymann, D., Asehnoune, K. and Corvec, S. (2017). Interaction of Cutibacterium ( formerly Propionibacterium) acnes with bone cells: a step toward understanding bone and joint infection development. Scientific Reports, 7(1).\n",
+    "\n",
+    "ZA, G. (2018). Cutibacterium (formerly Propionibacterium) acnes infections associated with implantable devices. - PubMed - NCBI . [online] Ncbi.nlm.nih.gov. Available at: https://www.ncbi.nlm.nih.gov/pubmed/29125405.\n",
+    "\n",
+    "Yoon, J. and Park, Y. (2006). The Genus Nocardioides. The Prokaryotes, pp.1099-1113.\n",
+    "\n",
+    "Ikunaga, Y., Sato, I., Grond, S., Numaziri, N., Yoshida, S., Yamaya, H., Hiradate, S., Hasegawa, M., Toshima, H., Koitabashi, M., Ito, M., Karlovsky, P. and Tsushima, S. (2010). Nocardioides sp. strain WSN05-2, isolated from a wheat field, degrades deoxynivalenol, producing the novel intermediate 3-epi-deoxynivalenol. Applied Microbiology and Biotechnology, 89(2), pp.419-427.\n",
+    "\n",
+    "Kovaleva, J., Degener, J. and van der Mei, H. (2014). Methylobacterium and Its Role in Health Care-Associated Infection. Journal of Clinical Microbiology, 52(5), pp.1317-1321."
    ]
   },
   {
